mainfest/kube-box-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-box-ds
  namespace: default
  labels:
    app: kube-box-ds
spec:
  selector:
    matchLabels:
      app: kube-box-ds
  template:
    metadata:
      labels:
        app: kube-box-ds
    spec:
      tolerations:
      # this toleration is to have the daemonset runnable on master nodes
      # remove it if your masters can't run pods
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: kube-box
        image: kube-box:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: portbox
            containerPort: 9110
            protocol: TCP 
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: ipdata # volumes.name 名称一致
          mountPath: /work/data/ip.data # 落盘的文件名称
          subPath: "ip.data"
      volumes: # 挂载配置
      - name: ipdata # ip 数据表格
        configMap:
          name: kube-box-ipdata # configmap.name
          items:
            - key: data-list
              path: "ip.data"
